[package]
name = "tab-organizer"
version = "5.0.0"
authors = ["Pauan <pcxunlimited@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[workspace]
members = [
    "src/sidebar",
    "src/background",
    "web-extension",
]

[dependencies]
wasm-bindgen = "0.2.45"
wasm-bindgen-futures = { version = "0.3.27", features = ["futures_0_3"] }
js-sys = "0.3.27"
futures-signals = "0.3.0"
uuid = { version = "0.7.1", features = ["serde", "v4", "wasm-bindgen"] }
dominator = "0.5.0"
serde = "1.0.36"
serde_derive = "1.0.36"

[dependencies.web-sys]
version = "0.3.27"
features = [
	"Storage",
    "Performance",
    "Window",
]
