[package]
name = "tab-organizer"
version = "5.0.0"
authors = ["Pauan <pcxunlimited@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[workspace]
members = [
    "src/sidebar",
    "src/background",
    "web-extension",
]

[dependencies]
wasm-bindgen = { version = "0.2.45", features = ["nightly"] }
wasm-bindgen-futures = { version = "0.3.27", features = ["futures_0_3"] }
js-sys = "0.3.27"
futures-preview = { version = "0.3.0-alpha.19", features = ["async-await"] }
futures-signals = "0.3.0"
uuid = { version = "0.7.1", features = ["serde", "v4", "wasm-bindgen"] }
dominator = "0.5.0"
serde = "1.0.36"
serde_derive = "1.0.36"
serde_json = "1.0.40"
web-extension = { path = "web-extension" }

[dependencies.web-sys]
version = "0.3.27"
features = [
	"console",
	"Storage",
    "Performance",
    "Window",
]
