[package]
name = "tab-organizer"
version = "5.0.0"
authors = ["Pauan <pcxunlimited@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug-assertions = true
lto = true

[workspace]
members = [
    "src/sidebar",
    "src/background",
    "src/options",
    "web-extension",
]

[dependencies]
console_error_panic_hook = "0.1.5"
wasm-bindgen = { version = "0.2.45", features = ["nightly"] }
wasm-bindgen-futures = "0.4.0"
js-sys = "0.3.27"
futures-preview = { version = "0.3.0-alpha.19", features = ["async-await"] }
futures-signals = "0.3.0"
uuid = { version = "0.7.1", features = ["serde", "v4", "wasm-bindgen"] }
dominator = "0.5.0"
serde = "1.0.36"
serde_derive = "1.0.36"
serde_json = "1.0.40"
lazy_static = "1.0.0"
web-extension = { path = "web-extension" }

[dependencies.web-sys]
version = "0.3.27"
features = [
	"Blob",
    "BlobPropertyBag",
    "console",
    "Storage",
    "Performance",
    "Url",
    "Window",
]
