[package]
name = "background"
version = "0.1.0"
authors = ["Pauan <pauanyu+github@pm.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.5"
web-extension = { path = "../../web-extension" }
wasm-bindgen = "0.2.45"
js-sys = "0.3.27"
futures-preview = { version = "0.3.0-alpha.19", features = ["async-await"] }
futures-signals = "0.3.0"
tab-organizer = { path = "../.." }
serde_json = "1.0.40"
dominator = "0.5.0"
uuid = "0.7.1"
serde = "1.0.36"
wasm-bindgen-futures = "0.4.0"

[dependencies.web-sys]
version = "0.3.27"
features = [
    "console",
]
