[package]
name = "options"
version = "0.1.0"
authors = ["Pauan <pauanyu+github@pm.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.5"
web-extension = { path = "../../web-extension" }
wasm-bindgen = "0.2.45"
futures-signals = "0.3.0"
tab-organizer = { path = "../.." }
dominator = "0.5.0"
