[package]
name = "options"
version = "0.1.0"
authors = ["Pauan <pauanyu+github@pm.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
web-extension = { path = "../../web-extension" }
wasm-bindgen = "0.2.45"
futures-signals = "0.3.0"
tab-organizer = { path = "../.." }
dominator = "0.5.0"
futures-preview = "0.3.0-alpha.16"
wasm-bindgen-futures = "0.4.0"

[dependencies.web-sys]
version = "0.3.27"
features = [
    "HtmlTextAreaElement",
]
