[package]
name = "sidebar"
version = "0.1.0"
authors = ["Pauan <pauanyu+github@pm.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.5"
#web-extensions = { path = "../../web-extensions" }
wasm-bindgen = "0.2.45"
js-sys = "0.3.27"
#discard = "1.0.3"
#serde = "1.0.36"
#serde_derive = "1.0.36"
#serde_json = "1.0.13"
futures-preview = "0.3.0-alpha.16"
futures-signals = "0.3.0"
lazy_static = "1.0.0"
#uuid = { version = "0.7.1", features = ["serde"] }
dominator = "0.5.0"
tab-organizer = { path = "../.." }
uuid = { version = "0.7.1", features = ["serde", "v4", "wasm-bindgen"] }
wasm-bindgen-futures = "0.4.0"

[dependencies.regex]
version = "1.3.1"
# Disables Unicode support, which causes a huge file size reduction
default-features = false
features = ["std", "perf"]

[dependencies.web-sys]
version = "0.3.27"
features = [
    "console",
    "DomRect",
    "Element",
    "EventTarget",
    "History",
    "HtmlElement",
    "HtmlInputElement",
    "ScrollRestoration",
]

#[patch.crates-io]
#stdweb = { path = "../stdweb" }
#dominator = { path = "../rust-dominator" }
#futures-signals = { path = "../rust-signals" }
